release-data/changelogs/9.1/plugins/openscap.adoc
= Changelogs for Rudder plugin openscap 9.1.\* versions

== openscap-9.1.2-2.2 (2026-06-11)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.1 series and therefore all installations of 9.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-9.1.1-2.2 (2026-05-04)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.1 series and therefore all installations of 9.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-9.1.0-2.2 (2026-04-13)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.1 series and therefore all installations of 9.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-9.1.0.rc1-2.2 (2026-04-10)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.1 series and therefore all installations of 9.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-9.1.0.beta1-2.2 (2026-03-10)

=== Changes


==== Plugins management

* License should check instance id if defined 
    (https://issues.rudder.io/issues/28273[#28273])

=== Bug fixes

==== Plugins management

* Fixed: Update templating-maven-plugin since 1.0 API doesn't work with recent maven anymore (public)
    (https://issues.rudder.io/issues/28279[#28279])

=== Release notes

This is a bug fix release in the 9.1 series and therefore all installations of 9.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-9.1.0.alpha1-2.2 (2026-01-26)

=== Changes


==== Miscellaneous

* Update Scala dependencies - 9.1 
    (https://issues.rudder.io/issues/27842[#27842])

=== Bug fixes

=== Release notes

This is a bug fix release in the 9.1 series and therefore all installations of 9.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

